<resources>
    <string name="app_name">YEP!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Date">ON WHICH DAY IS THE EVENT?</string>
    <string name="Phone">Enter phone no</string>

    <string name="action_settings">Settings</string>
    <string name="search_result">Search Result!</string>
    <string name="country_prompt">Choose a Country</string>
    <string-array name="country_arrays">
        <item>Wedding</item>
        <item>Birthdays</item>
        <item>Conferences</item>
        <item>Workshops</item>
        <item>Special Functions</item>
    </string-array>
    <string name="search_hint">Type and Search</string>
    <string name="menu_search">Search</string>
    <string name="large_text">
        "YEP is a great platform where in users can meet, know and book event planners for their events. The user can either send SMS or call event planner from a list of event planners."\n\n

"We are looking for event planners who are
1) Very passionate about event planning
2) Willing to help users in all the ways
        humanly possible
3) Good organizational and execution skills.
4) Has a strong team and can work independently
5) Excellent customer service."\n\n

"YEP offers event planners a chance to build on existing talents, learn new skills and gain a lot more experience in event planning."\n\n
"We are responsible only for creating and developing the app, the rest all will be managed by event planners."\n\n

"Email id:yepeedsgt@gmail.com"\n\n
"Phone number:
        Divya     -  9032993962
        Goda      -  9652266780
        Sahaja    -  9032159581
        Tasneem   -  9581199642"\n\n

</string>
    <string name="small">
"FAQ"\n\n

"1)What is YEP?"\n\n
        "YEP is a great platform where in users can meet, know and book event planners for their events. The user can either send SMS or call event planner from a list of event planners."\n\n


"2)Can an event planner register register in this app?"\n\n
  "Yes!"\n\n

"3)Can a user register in this app?"\n\n
  "No"\n\n

 "4)What are the benefits for event planners registering in this app"\n\n
 "YEP offers event planners a chance to build on existing talents, learn new skills and gain a lot more experience in event planning."\n\n

    </string>

    <string name="Time">At WHAT TIME IS THE EVENT?</string>
    <string name="Budget">ENTER BUDGET</string>
    <string name="Capacity">ENTER CAPACITY</string>
    <string name="Submit">OK</string>
    <string name="MessageText">send sms</string>
    <string name="SendSms">SEND SMS</string>
    <string name="Message">ENTER MESSAGE</string>
    <string name="orgname">ORGANISATION NAME</string>
</resources>
